--- a/index.html
+++ b/index.html
@@ -125,6 +125,20 @@
                         <li><i class="fa-solid fa-microphone-slash"></i></li>
                         <li>Pinco Pallo</li>
                     </ul>
+                </div>
+                <div class="card">
+                    <img src="https://picsum.photos/200/300" class="img">
+                    <ul>
+                        <li><i class="fa-solid fa-microphone-slash"></i></li>
+                        <li>Pinco Pallo</li>
+                    </ul>
+                </div>
+                <div class="card">
+                    <img src="https://picsum.photos/200/300" class="img">
+                    <ul>
+                        <li><i class="fa-solid fa-microphone-slash"></i></li>
+                        <li>Pinco Pallo</li>
+                    </ul>
                 </div><div class="card">
                     <img src="https://picsum.photos/200/300" class="img">
                     <ul>
