cards aspect ratio migliorato

--- a/index.html
+++ b/index.html
@@ -391,15 +391,23 @@
                     <li class="footer-ico">
                         <a href="#!">
                         <i class="fa-solid fa-microphone big-ico"></i>
-                        <i class="fa-solid fa-angle-up"></i>
                         <p>Mute</p>
                     </a>  
                     </li>
                     <li class="footer-ico">
                         <a href="#!">
-                        <i class="fa-solid fa-video big-ico"></i>
                         <i class="fa-solid fa-angle-up"></i>
+                    </a>  
+                    </li>
+                    <li class="footer-ico">
+                        <a href="#!">
+                        <i class="fa-solid fa-video big-ico"></i>
                         <p>Stop Video</p>
+                    </a> 
+                    </li>
+                    <li class="footer-ico">
+                        <a href="#!">
+                        <i class="fa-solid fa-angle-up"></i>
                     </a> 
                     </li>
                 </ul>
